# AWS-ECS-project

.devcontainer/: Dockerfile  devcontainer.json
applications/temp-fastapi/: Dockerfile  pyproject.toml
applications/temp-fastapi/app/: main.py
applications/temp-streamlit/: Dockerfile  pyproject.toml
applications/temp-streamlit/app/: main.py
aws/: package-lock.json  package.json
aws/lib/: ecs-container-role.ts  ecs-stack.ts  vpc-stack.ts
aws/lib/functions/: ecr.ts  ecs-task-def.ts  fargate-service.ts  loadbalancer-front-and-back.ts  loadbalancer-single-app.ts
aws/lib/lambdas/service-update/: Dockerfile  pyproject.toml
aws/lib/lambdas/service-update/app/: app.py  env.py
aws/lib/resouce-wrapper/: ecr.ts  ecs-task-def.ts  fargate-service.ts  loadbalancer-front-and-back.ts  loadbalancer-single-app.ts  service-update-lambda.ts
aws/types/: parameter.ts
nextjs/: Dockerfile  package-lock.json
temp-fastapi/app/: main.py
